Fix for issue : WMS-7548 Mobile project - Calendar widget is not visible while drag and drop into the canvas

--- a/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
@@ -1451,7 +1451,7 @@ body {
   //Angular UI bootstrap 1.1.0 related styles.
   .ng-animate.item:not(.left):not(.right){-webkit-transition:0s ease-in-out left;transition:0s ease-in-out left};
   .uib-datepicker .uib-title{width:100%;}
-  .uib-datepicker > table{width:100%;}
+  .uib-daypicker > table{width:100%;}
   .uib-day button,.uib-month button,.uib-year button{min-width:100%;}
   .uib-datepicker-popup.dropdown-menu{display:block;}
   .uib-button-bar{padding:10px 9px 2px;}
